<resources>
    <string name="app_name">OkHttpDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="url">URL</string>
    <string name="send">Send</string>
    <string name="http">http://</string>
    <string name="body">Body</string>
    <string name="header">Header</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="add_header">Add Header</string>
</resources>
